Added route for creating pitches
